Changes version 1.13
================================
 o observed data and plot.deSolve / matplot for multiple outputs  (karline)
 o combining compiled code function with R code event function (karline)
   - currently only for odepack solvers,
   - still to do: rk solvers
 o check sorting of event times (karline)
 o fix bug related to negative event time (patch supplied by J. Stott)
 o adapt maxstep calculation for rk methods,
   print a warning if maxsteps is exceeded, fix diagnostics (Thomas)
 o add reference to book of Soetaert, Cash and Mazzia (2012)

Changes version 1.12
================================
 o new functions matplot.deSolve and matplot.1D
 o fix valgrind issue (detected by new compilers)
 o small improvments of plotting functions
 o import standard packages as required by upcoming R versions

Changes version 1.11
================================
 o compiledCode vignette now with dede example
 o warning and error bug resolved
 o Time SEXP incompatibility with R 3.1.1 resolved
 o CFunc compatibility (compiled code)

Changes version 1.10.9
================================
 o documentation updates, hyperlinks to examples and vignettes
 o moved example directories

Changes version 1.10.8
================================
 o remove redundant .R files from inst/doc
 o fixed bug in event code (patch contributed by Jonathan Stott)

Changes version 1.10.7
================================
 o Fortran examples of compiled dede models (Woody)
 o vignettes moved to /vignettes
 o roles of authors (Authors@R)
 o function timestep is now internal
 o small documentation updates

Changes version 1.10.6 (Thomas) 
================================
 o change declaration of variable dimensions from (1) to (*) in legacy
   Fortran code to pass automatic bounds check
 o remove the Jacobian examples from ?ode because banddown=0 can
   lead to problems on some systems; examples will come back in a
   next release
 o fixed bug in the "iteration" solver