@@ -3,11 +3,12 @@ Changes version 1.13
  o observed data and plot.deSolve / matplot for multiple outputs  (karline)
  o combining compiled code function with R code event function (karline)
    - currently only for odepack solvers,
-   - still to do: rk solvers
+   - experimental: rk solvers
  o check sorting of event times (karline)
  o fix bug related to negative event time (patch supplied by J. Stott)
  o adapt maxstep calculation for rk methods,
    print a warning if maxsteps is exceeded, fix diagnostics (Thomas)
+ o more argument checking for rk solvers
  o add reference to book of Soetaert, Cash and Mazzia (2012)
 
 Changes version 1.12
